--- a/tasks/newwwtab-next/index.html
+++ b/tasks/newwwtab-next/index.html
@@ -96,7 +96,13 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 0.5rem;
+      margin-bottom: 2px;
+    }
+
+    .box-header button {
+      margin: 0;
+      padding: 2px 5px;
+      font-size: 0.8rem;
     }
 
     .drag-handle {
